# xacro

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  processor.rs  utils.rs
src/features/: conditions.rs  elements.rs  includes.rs  loops.rs  macros.rs  mod.rs  properties.rs
src/utils/: mod.rs
tests/: element_test.xacro  element_test_expected.urdf  if_test.xacro  if_test_expected.urdf  include_test_expected.urdf  include_test_included.xacro  include_test_main.xacro  insert_block_test.xacro  insert_block_test_expected.urdf  loop_test.xacro  loop_test_expected.urdf  macro_test.xacro  macro_test_expected.urdf  property_test.xacro  property_test_expected.urdf  unless_test.xacro  unless_test_expected.urdf
tests/data/: include_base_expected.urdf  include_multi_arms.xacro  include_nested_arm.xacro  include_nested_expected.urdf  include_test.xacro  include_test_component.xacro  include_test_directory.xacro  include_test_directory_expected.xacro  include_test_expected.xacro  include_test_multi_arms.xacro  include_test_multi_base.xacro  include_test_multi_expected.xacro  include_test_multi_wheels.xacro  include_test_nested_arm.xacro  include_test_nested_base.xacro  include_test_nested_expected.xacro  include_test_nested_hand.xacro  macro_test.xacro  macro_test_default.xacro  macro_test_default_expected.xacro  macro_test_expected.xacro  macro_test_nested.xacro  macro_test_nested_expected.xacro  property_test.xacro  property_test_attributes.xacro  property_test_attributes_expected.xacro  property_test_expected.xacro  property_test_multi_substitution.xacro  (+7 more)
(+18 files in other folders)
