[package]
name = "xacro"
version = "0.1.3"
edition = "2021"
description = "A xml preprocessor for xacro files to generate URDF files"
license = "MIT"
repository = "https://github.com/deniz-hofmeister/xacro"

[dependencies]
xml = "*"
xmltree = "*"
thiserror = "*"
hashbrown = "*"

[dev-dependencies]
log = "*"
env_logger = "*"
