[package]
name = "xacro"
version = "0.1.3"
edition = "2021"
description = "A xml preprocessor for xacro files to generate URDF files"
license = "MIT"
repository = "https://github.com/deniz-hofmeister/xacro"

[dependencies]
xml = "0.8.20"
xmltree = "0.11.0"
thiserror = "2.0.11"
hashbrown = "0.15.2"

[dev-dependencies]
log = "0.4.25"
env_logger = "0.11.6"
